# bashrcBot

./: .gitignore  CMakeLists.txt
inc/: musicPlayer.hpp
src/: main.cpp  musicPlayer.cpp
